Add header text cell at top. Add utility text and code cells at bottom.

--- a/Ashley_Hale_tutorial.ipynb
+++ b/Ashley_Hale_tutorial.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.3"
     },
     "colab": {
-      "name": "Ashley Hale tutorial.ipynb",
+      "name": "Ashley_Hale_tutorial.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -35,6 +35,32 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ashhale/survival-analysis/blob/master/Ashley_Hale_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WgYueiJRYsvU",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Final Project: Survival Analysis for Deep Learning\n",
+        "Ashley Hale\n",
+        "\n",
+        "Due: 5/8/2020 midnight\n",
+        "\n",
+        "### Purpose\n",
+        "Run the [*Survival Analysis for Deep Learning* tutorial][blog] using the supplied [Jupyter notebook][notebook].\n",
+        "\n",
+        "### Implementation Notes\n",
+        "\n",
+        "  * Inserted a code cell at the bottom for utility functions\n",
+        "\n",
+        "### Credits\n",
+        "\n",
+        "[//]: # (References)\n",
+        "[blog]: https://k-d-w.org/blog/2019/07/survival-analysis-for-deep-learning/\n",
+        "[notebook]: https://github.com/sebp/survival-cnn-estimator"
       ]
     },
     {
@@ -1439,6 +1465,64 @@
         "## Conclusion\n",
         "\n",
         "We successfully built, trained, and evaluated a convolutional neural network for survival analysis on MNIST. While MNIST is obviously not a clinical dataset, the exact same approach can be used for clinical data. For instance, [Mobadersany et al.](https://www.pnas.org/content/115/13/E2970) used the same approach to predict overall survival of patients diagnosed with brain tumors from microscopic images, and [Zhu et al.](https://scholar.google.com/scholar?cluster=3381426605939025516) applied CNNs to predict survival of lung cancer patients from pathological images."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wdVoB1Os_XJJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "---\n",
+        "# Utilities\n",
+        "\n",
+        "The code cells below are added by Ashley Hale. These are utilities for managing the Google Colaboratory running this Jupyter notebook. These are not meant to be run routinely."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dsR18NNdlGxy",
+        "colab_type": "code",
+        "outputId": "df13a4aa-13ca-4311-e80b-3237859694ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        }
+      },
+      "source": [
+        "# Utility functions to check on things. Not part of original tutorial.\n",
+        "# Recommend NOT running this whole code cell. Colab lets you select a line in\n",
+        "# this cell and then run it via Runtime > Run selection, or Ctrl-Shift-Enter\n",
+        "\n",
+        "!cat /proc/meminfo        # RAM Info\n",
+        "!cat /proc/cpuinfo        # CPU Info\n",
+        "!nvidia-smi               # GPU info\n",
+        "\n",
+        "print('hello')            # Confirm up and running on a VM\n",
+        "\n",
+        "!pip list                 # List the installed python packages\n",
+        "\n",
+        "!ls -l sample_data        # Filesystem commands\n",
+        "!pwd"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total 55504\n",
+            "-rwxr-xr-x 1 root root     1697 Jan  1  2000 anscombe.json\n",
+            "-rw-r--r-- 1 root root   301141 May  4 16:26 california_housing_test.csv\n",
+            "-rw-r--r-- 1 root root  1706430 May  4 16:26 california_housing_train.csv\n",
+            "-rw-r--r-- 1 root root 18289443 May  4 16:26 mnist_test.csv\n",
+            "-rw-r--r-- 1 root root 36523880 May  4 16:26 mnist_train_small.csv\n",
+            "-rwxr-xr-x 1 root root      930 Jan  1  2000 README.md\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
